# CUASC_2026

./: .gitignore  AGENTS.md  Architecture.md  Comp_Rules.md  JETSON_SETUP.md  README.md  SETUP.md  TODO.md  build_drone.sh  camera_calibration.md  check_mavros_streams.sh  data_logger_node.py  gripper.sh  image_viewer.sh  instructions.md  mavros_boot.sh  offline.sh  pratik_notes.txt  preflight_checks.sh  pyproject.toml  raycast_gui.py  scan_network.sh  session.sh  set_live_mission_coords.py  set_stream_rate.sh  sim_iris.sh  sprayer.sh  sync_time.py  temp.txt
src/drone_control/: README.md  package.xml  setup.py
src/drone_control/drone_control/: detection_simulator.py  simple_takeoff.py  target_localizer.py  target_spawner.py  target_tracker_sim.py  target_visualizer.py  waypoint_follower.py
src/drone_control/launch/: demo_visualizer.launch.py  target_demo.launch.py  waypoint_demo.launch.py
src/drone_cv/: CMakeLists.txt  package.xml  setup.py
src/drone_cv/drone_cv/: __init__.py  image_grabber.py  inference.py
src/drone_cv/launch/: waypoint_demo.launch.py
src/drone_demo/: README.md  package.xml  setup.py
src/drone_demo/config/: mission_params.yaml  mission_square.yaml  mission_square_params.yaml  waypoint_square.yaml  waypoint_zig_zag.yaml
src/drone_demo/drone_demo/: simple_takeoff_service.py  waypoint_demo_mission.py
src/drone_demo/launch/: waypoint_demo.launch.py
src/drone_live_tests/: README.md  package.xml  setup.cfg  setup.py
src/drone_live_tests/config/params/: live_landing_test_params.yaml
src/drone_live_tests/config/sequences/: live_landing_test.yaml
src/drone_live_tests/drone_live_tests/: __init__.py
src/drone_live_tests/drone_live_tests/missions/: __init__.py  live_landing_test_mission.py
src/drone_live_tests/launch/: live_landing_test.launch.py
src/drone_live_tests/resource/: drone_live_tests
src/drone_live_tests/test/: test_live_landing_test_mission.py
src/drone_mission_core/: README.md  package.xml  setup.cfg  setup.py
src/drone_mission_core/drone_mission_core/: __init__.py  mission_api.py  mission_context.py  mission_executor.py  registry.py  tracking_projection.py
src/drone_mission_core/resource/: drone_mission_core
src/drone_mission_core/test/: test_tracking_projection.py
src/drone_mission_demo/: README.md  package.xml  setup.cfg  setup.py
src/drone_mission_demo/config/params/: live_target_mission.yaml  mission_params.yaml  package_drop_params.yaml  sim_target_mission.yaml
src/drone_mission_demo/config/patterns/: square.yaml  zig_zag.yaml
src/drone_mission_demo/config/sequences/: circuit_time_trial_live.yaml  final_curcuit_delivery.yaml  final_waypoint_drop.yaml  package_delivery_demo.yaml  package_delivery_live.yaml  package_drop_demo.yaml  package_drop_live.yaml  square_only.yaml  square_then_zig_zag.yaml  waypoint_navigation_live.yaml
src/drone_mission_demo/config/waypoints/: competition_waypoints.yaml
src/drone_mission_demo/drone_mission_demo/: __init__.py
src/drone_mission_demo/drone_mission_demo/missions/: __init__.py  gps_waypoint_mission.py  local_waypoint_mission.py  package_delivery_mission.py  package_drop_mission.py  red_bullseye_mission_base.py  rtl_mission.py  takeoff_mission.py
src/drone_mission_demo/launch/: circuit_time_trial_live.launch.py  final_curcuit_delivery.launch.py  final_waypoint_drop.launch.py  image_grabber_demo.launch.py  multi_mission_demo.launch.py  old_package_delivery_live.launch.py  old_package_drop_live.launch.py  package_delivery_demo.launch.py  package_delivery_live.launch.py  package_drop_demo.launch.py  package_drop_live.launch.py  waypoint_navigation_live.launch.py
src/drone_mission_demo/resource/: drone_mission_demo
src/drone_mission_demo/test/: test_gps_waypoint_mission.py  test_package_drop_mission.py
src/drone_package_drop/: README.md  package.xml  setup.cfg  setup.py
src/drone_package_drop/config/: mission_params.yaml
src/drone_package_drop/drone_package_drop/: payload_drop.py  target_cv.py
src/drone_package_drop/launch/: payload_drop.launch.py
src/drone_target_cv/: README.md  package.xml  setup.cfg  setup.py
src/drone_target_cv/config/: compressed_grabber_demo.yaml  mipi_info.yaml  mipi_params.yaml  target_cv_live.yaml  target_cv_live_old.yaml  usb_grabber_live.yaml
src/drone_target_cv/drone_target_cv/: __init__.py  compressed_grabber.py  debug_viewer.py  mipi_grabber.py  target_cv.py  target_detector.py  usb_grabber.py
src/drone_target_cv/launch/: mipi_grabber.launch.py  target_cv_live.launch.py  usb_grabber.launch.py
src/drone_target_cv/resource/: drone_target_cv
src/drone_target_cv/test/: test_target_detector.py
src/drone_utils/: README.md  package.xml  setup.cfg  setup.py
src/drone_utils/drone_utils/: gimble_point_service.py  sdf_objects.py  session_log_utils.py  session_logger.py  simple_takeoff_service.py
src/drone_utils/test/: test_session_log_utils.py  test_stream_contract.py
src/vision_pipeline/: README.md  TODO.md  package.xml  setup.py
src/vision_pipeline/archive/: archive_vision.sh  simple_raycaster.py  target_localizer.py
src/vision_pipeline/config/: arducam_info.yaml  competition_run.yaml  kalibr.yaml  offline_flight_config.yaml  vision_params.yaml
src/vision_pipeline/launch/: data_logger.launch.py  vision_demo.launch.py
src/vision_pipeline/urdf/: hexacopter.urdf
src/vision_pipeline/vision_pipeline/: competition_launch.md  compressed_grabber.py  data_logger_node.py  execute.md  export_bin_to_csv.py  flight_00000031_telemetry.csv  image_grabber.py  local_sync_and_gui.sh  main.py  mission_logger.py  object_localization_mission.py  offline_photogrammetry.py  offline_photogrammetry_2.py  output.txt  run_clustering.sh  simple_raycaster.py  survey_mission.py  target_clustering.py  target_clustering_v1.py  target_cv.py  target_geolocator.py  vision.sh  visualize_clusters.py  yolo_node.py
src/vision_pipeline/vision_pipeline/LOGS/: LASTLOG.TXT
src/vision_pipeline/vision_pipeline/logs_csv/: flight_00000029_telemetry.csv  flight_00000030_telemetry.csv  flight_00000031_telemetry.csv
