<?xml version="1.0"?>
<package format="3">
  <name>drone_package_drop</name>
  <version>0.0.1</version>
  <description>Precision payload drop mission using GPS navigation and visual target tracking.</description>
  <maintainer email="pate2293@purdue.edu">ppatel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
