<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_pipeline</name>
  <version>0.0.1</version>
  <description>Vision pipeline (grabs images and runs inference)</description>
  <maintainer email="yoon315@purdue.edu">samuel_yoon</maintainer>
  <license>TODO: License declaration</license>

    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>mavros_msgs</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>vision_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
